# kiosk-ai-agent

./: .gitignore  README.md  main.py  pyproject.toml
cache/: call_llm.py  session.py
llm/: generate_ans.py  gpt_answer.py  load_prompt.py
prompts/: ans_prompt.txt  system_prompt.txt
seeds/: menu_snapshot_001_v1.json
stt/: stt_openai.py
